# pattern-lens

./: .gitignore  .lmignore  README.md  demo.ipynb  makefile  pyproject.toml
.github/requirements/: requirements-all.txt  requirements-base.txt  requirements.txt
.github/workflows/: checks.yml
.meta/: typing-summary.toml
.meta/.type-errors/: mypy.txt
.meta/requirements/: requirements-all.txt  requirements.txt
data/: pile_100.jsonl  pile_demo.jsonl
docs/: pattern_lens.html  search.js  summary.md
docs/combined/: pattern_lens.html  pattern_lens.md  pattern_lens.txt  pattern_lens_gfm.md
docs/coverage/: coverage.txt
docs/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_17bd492d087794b9_test_activations_batched_py.html  z_17bd492d087794b9_test_activations_py.html  z_17bd492d087794b9_test_activations_return_py.html  z_17bd492d087794b9_test_figure_util_py.html  z_17bd492d087794b9_test_figures_py.html  z_17bd492d087794b9_test_load_activations_py.html  z_17bd492d087794b9_test_multifig_py.html  z_17bd492d087794b9_test_server_py.html  z_33b75668da6b6a11_test_pipeline_py.html  z_92b9f24d5d309680___init___py.html  z_92b9f24d5d309680_activations_py.html  z_92b9f24d5d309680_attn_figure_funcs_py.html  z_92b9f24d5d309680_consts_py.html  z_92b9f24d5d309680_figure_util_py.html  z_92b9f24d5d309680_figures_py.html  z_92b9f24d5d309680_indexes_py.html  z_92b9f24d5d309680_load_activations_py.html  z_92b9f24d5d309680_prompts_py.html  z_92b9f24d5d309680_server_py.html  z_a40f6d277e0496df_test_clis_py.html  z_a40f6d277e0496df_test_pipeline_py.html  z_a44f0ac069e85531_conftest_py.html  z_b2ca1f4181a5c386_test_activations_py.html  z_b2ca1f4181a5c386_test_activations_return_py.html  z_b2ca1f4181a5c386_test_figure_util_py.html  z_b2ca1f4181a5c386_test_figures_py.html  z_b2ca1f4181a5c386_test_load_activations_py.html
docs/demo/: functions.jsonl  index.html  models.jsonl  single.html
docs/demo/pythia-14m/: prompts.jsonl
docs/demo/pythia-14m/prompts/-bBNznaD7dEJ75kRcwUg6A/: activations.npz  prompt.json
docs/demo/pythia-14m/prompts/-dDLtEAuQkO6aEbgF9OZ9A/: activations.npz
docs/demo/pythia-14m/prompts/-jMUADxBxpgekgJr-4G6FA/: activations.npz
docs/demo/pythia-14m/prompts/0T2_mqAPMHZz7XDKhPqLRw/: activations.npz
docs/demo/pythia-14m/prompts/11tQxM9qz7K_yq7jRag0Ag/: activations.npz  prompt.json
docs/demo/pythia-14m/prompts/154QVY-xqZlyiFm1FvmMhg/: activations.npz
docs/demo/pythia-14m/prompts/1GK4JmhIna-LpjXc0pF6Bw/: activations.npz
docs/demo/pythia-14m/prompts/2bhEMEEl-gatyatnmHobMA/: activations.npz  prompt.json
docs/demo/pythia-14m/prompts/4AIcD4dG6q_ZzPYmS3Zrow/: activations.npz
docs/demo/pythia-14m/prompts/6gpXHk5S4UQpupLha8q5TA/: activations.npz
docs/demo/pythia-14m/prompts/7ACbiDg7tQ7q3vA1mz2I_g/: activations.npz
docs/demo/pythia-14m/prompts/9Hg1qyV1vUCZPQxUjnXqvQ/: activations.npz
docs/demo/pythia-14m/prompts/BVKmVq_5BCN7CoUONVJZgQ/: activations.npz  prompt.json
docs/demo/pythia-14m/prompts/BluFR0Mkw99tGCpW4juOrA/: activations.npz  (+1 more)
docs/demo/tiny-stories-1M/: prompts.jsonl
docs/other/: lmcat.txt  todo-inline-standard.md  todo-inline-table.md  todo-inline.html  todo-inline.jsonl  todo-inline.md
docs/pattern_lens/: activations.html  attn_figure_funcs.html  consts.html  figure_util.html  figures.html  indexes.html  load_activations.html  prompts.html  server.html
docs/resources/: make_docs.py
frontend/: index.html
pattern_lens/: __init__.py  activations.py  attn_figure_funcs.py  consts.py  figure_util.py  figures.py  indexes.py  load_activations.py  load_model.py  model_table.py  prompts.py  server.py
pattern_lens/frontend/: app.js  fileOps.js  index.html  index.template.html  patternlens.html  single.html  style.css
pattern_lens/frontend/patternlens/: app.js  config.js  index.html
pattern_lens/frontend/single/: config.js  dataLoader.js  index.html  matrix_png.js  sg_cfg.json  style.css  viewer.js
tests/: conftest.py
tests/integration/: test_clis.py  test_pipeline.py
tests/unit/: test_activations.py  test_activations_batched.py  test_activations_return.py  test_beartype_annotations.py  test_figure_util.py  test_figures.py  test_load_activations.py  test_model_table.py  test_multifig.py  test_resolve_model_name.py  test_sanitize.py
(+1066 files in other folders)
