[project]
    name = "pattern_lens"
    version = "0.3.0"
    description = ""
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        # standard
        "numpy>=1.26.1,<2.0.0",
        "torch>=2.5.1",
        "jaxtyping>=0.2.33",
        "tqdm>=4.66.5",
        "pandas>=2.2.2",
        "scipy>=1.14.1",
        # "scikit-learn>=1.3",
        "matplotlib>=3.8.0",
        "pillow>=11.0.0",
        # jupyter
        "ipykernel>=6.29.5",
        "ipywidgets>=8.1.5",
        # typing
        "beartype>=0.14.1",
        # custom utils
        "muutils>=0.6.19",
        "zanj>=0.3.1",
        # TL
        "transformer-lens>=2.10.0",
        # this TL dep not listed? is this in an extra?
        "typeguard>=4.4.1",
    ]

[dependency-groups]
    dev = [
        # lmcat
        "lmcat>=0.2.0; python_version >= '3.11'",
        # test
        "pytest>=8.2.2",
        # coverage
        "pytest-cov>=4.1.0",
        "coverage-badge>=1.1.0",
        # type checking
        "mypy>=1.0.1",
        "types-tqdm",
        # docs
        'pdoc>=14.6.0',
        # tomli since no tomlib in python < 3.11
        "tomli>=2.1.0; python_version < '3.11'",
        # lint
        "pycln>=2.1.3",
        "ruff>=0.4.8",
    ]

[tool.uv]
    package = true

[project.urls]
    Homepage = "https://miv.name/pattern-lens"
    Documentation = "https://miv.name/pattern-lens"
    Repository = "https://github.com/mivanit/pattern-lens"
    Issues = "https://github.com/mivanit/pattern-lens/issues"

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

# tools
[tool]
    [tool.hatch.build.targets.wheel]
        packages = ["pattern_lens"]

    # ruff config
    [tool.ruff]
        exclude = ["__pycache__"]

    [tool.ruff.lint]
        ignore = ["F722"]

    [tool.ruff.format]
        indent-style = "tab"
        skip-magic-trailing-comma = false

    [tool.pytest.ini_options]
        addopts = "--jaxtyping-packages=pattern_lens,beartype.beartype"
        filterwarnings = [
            "ignore: PEP 484 type hint*:beartype.roar._roarwarn.BeartypeDecorHintPep585DeprecationWarning",
        ]

    # `make lmcat` depends on the lmcat and can be configured here
    [tool.lmcat]
        output = "docs/other/lmcat.txt" # changing this might mean it wont be accessible from the docs
        ignore_patterns = [
            "!docs/resources/make_docs.py",
            "docs/**",
            ".venv/**",
            ".git/**",
            ".meta/**",
            "uv.lock",
            "LICENSE",
        ]

# for configuring this tool (makefile, make_docs.py)
# ============================================================
[tool.makefile]

# documentation configuration, for `make docs` and `make docs-clean`
[tool.makefile.docs]
    output_dir = "docs"
    no_clean = [
        ".nojekyll",
    ]
    markdown_headings_increment = 2
    warnings_ignore = [
        ".*No docstring.*",
        ".*Private member.*",
    ]
    [tool.makefile.docs.notebooks]
        enabled = true
        source_path = "notebooks"
        output_path_relative = "notebooks"
        # [tool.makefile.docs.notebooks.descriptions]
        #     "example" = "Example notebook showing basic usage"
        #     "advanced" = "Advanced usage patterns and techniques"
        
        

# Custom export configurations
# affects `make dep` and related commands
[tool.makefile.uv-exports]
	args = [
		"--no-hashes"
	]
	exports = [
		# # all groups and extras
		{ name = "all", filename="requirements.txt", groups = true, extras=true },
		# # all groups and extras, a different way
		{ name = "all", groups = true, options = ["--all-extras"] },
	]

# configures `make todo`
[tool.makefile.inline-todo]
	search_dir = "."
	out_file = "docs/other/todo-inline.md"
	context_lines = 2
	extensions = ["py", "md"]
	tags = ["CRIT", "TODO", "FIXME", "HACK", "BUG", "DOC"]
	exclude = [
		"docs/**",
		".venv/**",
		"scripts/get_todos.py",
	]
	branch = "main"
    [tool.makefile.inline-todo.tag_label_map]
        "BUG" = "bug"
        "TODO" = "enhancement"
		"DOC" = "documentation"

# ============================================================